--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,9 @@ ul li{
 
 .fl{
   float: left;
+  margin-right: 20px;
+  margin-top: 15px;
+
 }
 /* utility */
 
@@ -76,11 +79,25 @@ Nav > p{
 .center{
   font-size: 18px;
   padding: 20px;
-  width: 50%;
+  width: 46%;
   background: white;
+  margin: 15px 30px;
 }
 
 .center > h2{
   margin-bottom: 30px;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.colonna_destra{
+  float: right;
+  width: 20%;
+  height: 900px;
+}
+
+.colonna_destra > .right{
+  background: white;
+  margin-left: 20px;
+  margin-top: 15px;
+  padding: 15px;
 }
