--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,7 @@ ul li{
   text-transform: uppercase;
   font-size: 11px;
   display: inline;
+  vertical-align: middle;
   list-style: none;
 }
 
@@ -50,9 +51,17 @@ ul li{
 }
 /* utility */
 
+
+
 main{
   margin: auto;
   width: 950px;
+}
+
+main:after{
+  content: "";
+  display: table;
+  clear: both;
 }
 
 span{
@@ -92,12 +101,36 @@ Nav > p{
 .colonna_destra{
   float: right;
   width: 20%;
-  height: 900px;
 }
 
 .colonna_destra > .right{
   background: white;
   margin-left: 20px;
   margin-top: 15px;
+  margin-bottom: 30px;
   padding: 15px;
+}
+
+.right > h2{
+  margin-bottom: 30px;
+}
+
+.right > p{
+  padding: 10px;
+}
+
+footer{
+  margin: auto;
+  width: 950px;
+}
+
+.intestazione_footer{
+  width: 100%;
+  height: 25px;
+  background: white;
+  border-bottom: 3px solid grey;
+}
+
+.lista_social{
+  
 }
