--- a/assets/style.css
+++ b/assets/style.css
@@ -10,8 +10,39 @@ body{
 }
 
 header{
+  position: relative;
   margin: auto;
   width: 950px;
+}
+
+#img_natura{
+  border: 8px solid White;
+  background-image: url(img/natura.jpg);
+  background-size: cover;
+}
+
+#titolo_principale{
+  font-family:  sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid white;
+  padding: 15px;
+}
+
+h3{
+  font-family:  sans-serif;
+  margin-top: 15px;
+  color: white;
+  font-weight: 800;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .header{
@@ -131,6 +162,17 @@ footer{
   border-bottom: 3px solid grey;
 }
 
+.intestazione_footer>p{
+  text-align: center;
+}
+
 .lista_social{
-  
+  width: 100%;
+  height: 100px;
+  background: white;
+}
+
+.lista_social > div{
+  display: inline;
+  list-style: none;
 }
