--- a/assets/style.css
+++ b/assets/style.css
@@ -55,6 +55,7 @@ h3{
 .navigation{
   width: 100%;
   height: 30px;
+  padding: 4px;
   background-color: grey;
   text-align: center;
 }
@@ -67,6 +68,13 @@ ul li{
   display: inline;
   vertical-align: middle;
   list-style: none;
+}
+
+.navigation > ul > li:hover{
+  cursor: pointer;
+  background-color: #654321;
+  border-left: 3px solid black;
+  border-right: 3px solid black;
 }
 
 /* utility */
@@ -103,6 +111,7 @@ span{
   text-align: center;
   width: 25%;
   background: white;
+  border-radius: 5px;
 }
 
 Nav > h2, .box> h2{
@@ -122,6 +131,7 @@ Nav > p{
   width: 46%;
   background: white;
   margin: 15px 30px;
+  border-radius: 5px
 }
 
 .center > h2{
@@ -142,6 +152,10 @@ Nav > p{
   padding: 15px;
 }
 
+.right{
+  border-radius: 5px
+}
+
 .right > h2{
   margin-bottom: 30px;
 }
@@ -160,6 +174,8 @@ footer{
   height: 25px;
   background: white;
   border-bottom: 3px solid grey;
+  border-radius: 5px;
+
 }
 
 .intestazione_footer>p{
