--- a/assets/style.css
+++ b/assets/style.css
@@ -69,8 +69,13 @@ h3{
   width: 100%;
   height: 30px;
   padding: 4px;
-  background-color: grey;
+  background-color: #504741;
   text-align: center;
+}
+
+a{
+  color: white;
+  text-decoration: none;
 }
 
 ul li{
@@ -86,9 +91,10 @@ ul li{
 .navigation > ul > li:hover{
   cursor: pointer;
   background-color: #654321;
-  border-left: 3px solid black;
-  border-right: 3px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
 }
+
 /* /header */
 
 
@@ -121,10 +127,17 @@ Nav > h2, .box> h2{
 }
 
 Nav > p{
-  font-size: 20px;
+  font-size: 18px;
   margin: 15px;
+  line-height: 26px;
   text-align: left;
   color: green;
+}
+
+Nav > p:hover{
+  text-align: left;
+  text-decoration: underline;
+  cursor: pointer;
 }
 /* /colonna di sinistra */
 
@@ -173,7 +186,7 @@ Nav > p{
 
 .right > p{
   padding: 10px;
-  line-height: 30px;
+  line-height: 35px;
 }
 /* /colonna di destra */
 /* /main */
