--- a/assets/style.css
+++ b/assets/style.css
@@ -27,37 +27,6 @@ header{
   margin: auto;
   width: 950px;
 }
-
-#img_natura{
-  border: 8px solid White;
-  background-image: url(img/natura.jpg);
-  background-size: cover;
-}
-
-#titolo_principale{
-  font-family:  sans-serif;
-  font-size: 60px;
-  font-weight: 100;
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 5px solid white;
-  padding: 15px;
-}
-
-h3{
-  font-family:  sans-serif;
-  margin-top: 15px;
-  color: white;
-  font-weight: 800;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .header{
   margin-top: 15px;
   width: 100%;
@@ -69,7 +38,7 @@ h3{
   width: 100%;
   height: 30px;
   padding: 4px;
-  background-color: #504741;
+  background: lightgray;
   text-align: center;
 }
 
@@ -118,27 +87,11 @@ span{
 .box{
   text-align: center;
   width: 25%;
+  height: 500px;
   background: white;
   border-radius: 5px;
 }
 
-Nav > h2, .box> h2{
-  margin: 20px;
-}
-
-Nav > p{
-  font-size: 18px;
-  margin: 15px;
-  line-height: 26px;
-  text-align: left;
-  color: green;
-}
-
-Nav > p:hover{
-  text-align: left;
-  text-decoration: underline;
-  cursor: pointer;
-}
 /* /colonna di sinistra */
 
 /* colonna di destra */
@@ -146,18 +99,10 @@ Nav > p:hover{
   font-size: 18px;
   padding: 20px;
   width: 46%;
+  height: 400px;
   background: white;
   margin: 15px 30px;
-  border-radius: 5px
-}
-
-.center > h2{
-  margin-bottom: 30px;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-}
-
-.center > p{
-  line-height: 35px;
+  border-radius: 5px;
 }
 /* /colonna di centro */
 
@@ -170,28 +115,21 @@ Nav > p:hover{
 
 .colonna_destra > .right{
   background: white;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-top: 15px;
   margin-bottom: 30px;
   padding: 15px;
 }
 
 .right{
-  border-radius: 5px
+  border-radius: 5px;
+  height: 500px;
 }
 
-.right > h2{
-  margin-bottom: 30px;
-}
-
-.right > p{
-  padding: 10px;
-  line-height: 35px;
-}
 /* /colonna di destra */
 /* /main */
 
-
+/* footer */
 footer{
   margin: auto;
   width: 950px;
@@ -203,20 +141,16 @@ footer{
   background: white;
   border-bottom: 3px solid grey;
   border-radius: 5px;
-
 }
 
-.intestazione_footer>p{
-  text-align: center;
-}
 
 .lista_social{
   width: 100%;
   height: 100px;
   background: white;
+  margin-bottom: 15px;
+  border-radius: 5px;
 }
 
-.lista_social > div{
-  display: inline;
-  list-style: none;
-}
+
+/* /footer */
